Prevent margin collapsing

--- a/src/dc/components/layout/devcon-layout.module.scss
+++ b/src/dc/components/layout/devcon-layout.module.scss
@@ -1,11 +1,5 @@
 @import '../../../styles/mixins';
 
-
-.outerPageWrapper {
-  width: 100%;
-  height: 100%;
-}
-
 .innerPageWrapper {
   max-width: 1200px;
   width: 100%;
@@ -13,4 +7,5 @@
   box-sizing: border-box;
   margin-left: auto;
   margin-right: auto;
+  overflow: auto; // prevent margin collapsing
 }
